# Sub_DigiDuckBook

./: Dockerfile  pyproject.toml  setup.py
DigiDuckBook/: main_bot.py
DigiDuckBook/contacts/: address_book.py
DigiDuckBook/note_book/: notes_oop.py
